improve notification parts

--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
 									<legend>Report1:</legend>
 									<label for="WebsiteName1">Name:</label>
 									<input type="text" name="WebsiteName1" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl1">Url:</label>
+									<label for="WebsiteUrl1">URL:</label>
 									<input type="text" name="WebsiteUrl1" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report2:</legend>
 									<label for="WebsiteName2">Name:</label>
 									<input type="text" name="WebsiteName2" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl2">Url:</label>
+									<label for="WebsiteUrl2">URL:</label>
 									<input type="text" name="WebsiteUrl2" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report3:</legend>
 									<label for="WebsiteName3">Name:</label>
 									<input type="text" name="WebsiteName3" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl3">Url:</label>
+									<label for="WebsiteUrl3">URL:</label>
 									<input type="text" name="WebsiteUrl3" placeholder="Enter Website Url"/>
 								</li>
 								
@@ -165,21 +165,21 @@
 									<legend>Report1:</legend>
 									<label for="WebsiteName1">Name:</label>
 									<input type="text" name="WebsiteName1" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl1">Url:</label>
+									<label for="WebsiteUrl1">URL:</label>
 									<input type="url" name="WebsiteUrl1" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report2:</legend>
 									<label for="WebsiteName2">Name:</label>
 									<input type="text" name="WebsiteName2" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl2">Url:</label>
+									<label for="WebsiteUrl2">URL:</label>
 									<input type="url" name="WebsiteUrl2" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report3:</legend>
 									<label for="WebsiteName3">Name:</label>
 									<input type="text" name="WebsiteName3" placeholder="Enter Website Name"/>
-									<label for="WebsiteUrl3">Url:</label>
+									<label for="WebsiteUrl3">URL:</label>
 									<input type="url" name="WebsiteUrl3" placeholder="Enter Website Url"/>
 								</li>
 								
