--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<li><a class="icon-folder-open-o" href="#public-folders">Public Folders</a></li>
 				</ul>
 
-				<div id="quick-reports">
+				<div id="quick-reports-panel">
 					<div class="iframe-menu">
 						<form>
 							<select>
@@ -139,7 +139,7 @@
 					<iframe></iframe>
 				</div>
 				
-				<div id="my-folders">
+				<div id="my-folders-panel">
 					<div class="iframe-menu">
 						<form>
 							<input type="image"  class="img external-tab"  src="img/icons/expand.png" alt="Open in another tab"/>
@@ -149,7 +149,7 @@
 					<iframe></iframe>
 				</div>
 				
-				<div id="my-team-folders">
+				<div id="my-team-folders-panel">
 					<div class="iframe-menu">
 						<form>
 							<select>
@@ -193,7 +193,7 @@
 					<iframe></iframe>
 				</div>
 
-				<div id="public-folders">
+				<div id="public-folders-panel">
 					<div class="iframe-menu">
 						<form>
 							<input type="image"  class="img external-tab"  src="img/icons/expand.png" alt="Open in another tab"/>
