fix bugs in menu 3-top and add documention

--- a/index.html
+++ b/index.html
@@ -166,21 +166,21 @@
 									<label for="WebsiteName1">Name:</label>
 									<input type="text" name="WebsiteName1" placeholder="Enter Website Name"/>
 									<label for="WebsiteUrl1">URL:</label>
-									<input type="url" name="WebsiteUrl1" placeholder="Enter Website Url"/>
+									<input type="text" name="WebsiteUrl1" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report2:</legend>
 									<label for="WebsiteName2">Name:</label>
 									<input type="text" name="WebsiteName2" placeholder="Enter Website Name"/>
 									<label for="WebsiteUrl2">URL:</label>
-									<input type="url" name="WebsiteUrl2" placeholder="Enter Website Url"/>
+									<input type="text" name="WebsiteUrl2" placeholder="Enter Website Url"/>
 								</li>
 								<li>
 									<legend>Report3:</legend>
 									<label for="WebsiteName3">Name:</label>
 									<input type="text" name="WebsiteName3" placeholder="Enter Website Name"/>
 									<label for="WebsiteUrl3">URL:</label>
-									<input type="url" name="WebsiteUrl3" placeholder="Enter Website Url"/>
+									<input type="text" name="WebsiteUrl3" placeholder="Enter Website Url"/>
 								</li>
 								
 							</ul>
