--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>WebApp</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <!--  <link rel="apple-touch-icon" href="apple-touch-icon.png">-->
        
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="fonts/style.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+       <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
     </head>
     <body>
 		<header>
@@ -30,7 +30,7 @@
 			</div>
 
 			<nav>
-				<div class="nav-section">
+				<div class="nav-section" tabindex="0">
 					<p>Select Reporting Platform</p>
 
 					<div class="menu">
@@ -48,7 +48,7 @@
 					</div>
 				</div>
 
-				<div class="nav-section">
+				<div class="nav-section" tabindex="0">
 					<p>Select Dashboard</p>
 
 					<div class="menu">
@@ -66,7 +66,7 @@
 					</div>
 				</div>
 
-				<div class="nav-section">
+				<div class="nav-section" tabindex="0">
 					<p>Help &amp; Tutorials</p>
 
 					<div class="menu">
@@ -202,18 +202,18 @@
 			</section>
 		</section>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
+       <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>-->
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+       <!-- <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script>-->
     </body>
 </html>
