add select label
for accessbility

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 				<div id="quick-reports-panel">
 					<div class="iframe-menu">
 						<form>
-							<select>
+							<label class="selectSite" for="select1">Choose Site:</label>
+							<select id="select1">
 								
 							</select>
 							<input type="image"  class="img set-setting"  src="img/icons/settings.png" alt="Open tab menu"/>
@@ -149,7 +150,8 @@
 				<div id="my-team-folders-panel">
 					<div class="iframe-menu">
 						<form>
-							<select>
+							<label class="selectSite" for="select2">Choose Site:</label>
+							<select id="select2">
 								
 							</select>
 							<input type="image"  class="img set-setting"  src="img/icons/settings.png" alt="Open tab menu"/>
