add hidden label

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<a href="#"><img src="img/logo-netcraft.svg" alt="netcraft"></a>
 
 				<form class="search-box">
-					<input type="search" name="q" placeholder="search">
+					<label class="hidden" for="searchBox">Search Site:</label>
+					<input type="search" id="searchBox" name="q" placeholder="search">
 				</form>
 			</div>
 		</header>
@@ -96,7 +97,7 @@
 				<div id="quick-reports-panel">
 					<div class="iframe-menu">
 						<form>
-							<label class="selectSite" for="select1">Choose Site:</label>
+							<label class="hidden" for="select1">Choose Site:</label>
 							<select id="select1">
 								
 							</select>
@@ -150,7 +151,7 @@
 				<div id="my-team-folders-panel">
 					<div class="iframe-menu">
 						<form>
-							<label class="selectSite" for="select2">Choose Site:</label>
+							<label class="hidden" for="select2">Choose Site:</label>
 							<select id="select2">
 								
 							</select>
